--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = https://github.com/cctbx/clipper.git
 [submodule "eigen"]
 	path = modules/eigen
-        url = https://gitlab.com/libeigen/eigen.git 
+        url = https://gitlab.com/libeigen/eigen.git
 [submodule "gui_resources"]
 	path = modules/gui_resources
 	url = https://github.com/cctbx/gui_resources.git
@@ -36,4 +36,4 @@
 	url = https://github.com/yayahjb/cbflib.git
 [submodule "modules/dxtbx"]
 	path = modules/dxtbx
-	url = https://github.com/cctbx/dxtbx.git
+	url = https://github.com/dials/dxtbx.git
