CI: try setting release version again
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,9 @@ jobs:
     displayName: Set version
 
   - script: |
-      version=`echo $(Build.SourceBranch) | sed 's/refs\/heads\/releases\///'`
-      echo "##vso[task.setVariable variable=version]$version"
+      set -x -e
+      release=`echo $(Build.SourceBranch) | sed 's/refs\/heads\/releases\///'`
+      echo "##vso[task.setVariable variable=version]$release"
       echo $(version)
     displayName: Override version for release branch
     condition: startswith(variables['Build.SourceBranch'], 'refs/heads/releases/')
