CI: add pytest dependency

--- a/.azure-pipelines/conda-forge-win.yml
+++ b/.azure-pipelines/conda-forge-win.yml
@@ -21,7 +21,7 @@ jobs:
         displayName: Add conda to PATH
 
       - script: |
-          conda create -n test -c conda-forge -y cctbx-base python=$(PY_VER) junit-xml
+          conda create -n test -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
         displayName: Construct latest conda environment
 
       # module=cbflib_adaptbx
