--- a/.azure-pipelines/conda-forge-win.yml
+++ b/.azure-pipelines/conda-forge-win.yml
@@ -12,8 +12,8 @@ jobs:
           PY_VER: 3.7
         python3.8:
           PY_VER: 3.8
-        python3.9:
-          PY_VER: 3.9
+        # python3.9:
+        #   PY_VER: 3.9
 
     steps:
       # add conda to path
