CI: copy additional test files for fable and ucif
[skip ci]

--- a/.azure-pipelines/azure-pipelines-conda-forge.yml
+++ b/.azure-pipelines/azure-pipelines-conda-forge.yml
@@ -11,6 +11,13 @@ schedules:
       include:
       - master
 
+resources:
+  repositories:
+  - repository: cctbx_project
+    type: github
+    name: cctbx/cctbx_project
+    endpoint: cctbx
+
 jobs:
   - template: ./conda-forge-linux.yml
   - template: ./conda-forge-osx.yml
