--- a/.azure-pipelines/conda-forge-win.yml
+++ b/.azure-pipelines/conda-forge-win.yml
@@ -44,11 +44,12 @@ jobs:
 
       # module=cbflib_adaptbx
       - script: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           call activate test
           cd $(Pipeline.Workspace)
           mkdir tests
           cd tests
-          setx RSTBX_DIST=%CONDA_PREFIX%\lib\site-packages\rstbx
+          setx RSTBX_DIST="%CONDA_PREFIX%\lib\site-packages\rstbx"
           call libtbx.run_tests_parallel ^
             module=annlib_adaptbx ^
             module=boost_adaptbx ^
