--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,7 +112,11 @@ jobs:
 
   # build source tarball
   - script: |
-      build/bin/libtbx.create_installer --version $(version) --install_script modules/cctbx_project/libtbx/auto_build/plus_installer.py --dist_dir dist/$(version) tmp/cctbx-$(version)
+      build/bin/libtbx.create_installer \
+        --version $(version) \
+        --install_script modules/cctbx_project/libtbx/auto_build/plus_installer.py \
+        --dist_dir dist/$(version) \
+        tmp/cctbx-$(version)
     displayName: Build source tarball
 
   # publish source tarball as artifact
