--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ jobs:
   # set version
   - powershell: |
       Write-Host "##vso[task.setVariable variable=year]$(year)"
-      Write-Host "##vso[task.setVariable variable=month]$(month.trimstart("0"))"
-      Write-Host "##vso[task.setVariable variable=day]$(day.trimstart("0"))"
+      Write-Host "##vso[task.setVariable variable=month]$(month).TrimStart("0")"
+      Write-Host "##vso[task.setVariable variable=day]$(day).TrimStart("0")"
       Write-Host $(year)
       Write-Host $(month)
       Write-Host $(day)
