CI: Reorganize scripts
[skip ci]

--- a/.azure-pipelines/azure-pipelines-conda-forge-test.yml
+++ b/.azure-pipelines/azure-pipelines-conda-forge-test.yml
@@ -20,5 +20,11 @@ resources:
 
 jobs:
   - template: ./conda-forge-linux.yml
+    parameters:
+      channel: conda-forge
   - template: ./conda-forge-osx.yml
+    parameters:
+      channel: conda-forge
   - template: ./conda-forge-win.yml
+    parameters:
+      channel: conda-forge
