--- a/.azure-pipelines/templates/test-unix.yml
+++ b/.azure-pipelines/templates/test-unix.yml
@@ -1,3 +1,8 @@
+# External parameters
+#   channel
+# Other variables
+#   PY_VER
+
 steps:
   - checkout: cctbx_project
     path: ./cctbx_project
@@ -13,7 +18,7 @@ steps:
 
   - script: |
       set -xe
-      conda create -n test -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
+      conda create -n test -c ${{ parameters.channel }} -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
     displayName: Construct latest conda environment
 
   # copy extra test files
