CI: reorganize scripts
[skip ci]

--- a/.azure-pipelines/azure-pipelines-conda-forge-test.yml
+++ b/.azure-pipelines/azure-pipelines-conda-forge-test.yml
@@ -21,10 +21,10 @@ resources:
 jobs:
   - template: ./test-linux.yml
     parameters:
-      channel: conda-forge
+      CHANNEL: conda-forge
   - template: ./test-osx.yml
     parameters:
-      channel: conda-forge
+      CHANNEL: conda-forge
   - template: ./test-win.yml
     parameters:
-      channel: conda-forge
+      CHANNEL: conda-forge
