--- a/.azure-pipelines/templates/test-unix.yml
+++ b/.azure-pipelines/templates/test-unix.yml
@@ -1,6 +1,5 @@
 # External parameters
-#   channel
-# Other variables
+#   CHANNEL
 #   PY_VER
 
 steps:
@@ -18,7 +17,7 @@ steps:
 
   - script: |
       set -xe
-      conda create -n test -c ${{ parameters.channel }} -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
+      conda create -n test -c $(CHANNEL) -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
     displayName: Construct latest conda environment
 
   # copy extra test files
