--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -1,3 +1,6 @@
+# External parameters
+#   CHANNEL
+
 jobs:
   - job: win_64
     pool:
@@ -24,7 +27,7 @@ jobs:
         displayName: Add conda to PATH
 
       - script: |
-          conda create -n test -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
+          conda create -n test -c $(CHANNEL) -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
         displayName: Construct latest conda environment
 
       # copy extra test files
