--- a/.azure-pipelines/templates/test-unix.yml
+++ b/.azure-pipelines/templates/test-unix.yml
@@ -17,7 +17,7 @@ steps:
 
   - script: |
       set -xe
-      conda create -n test -c $(CHANNEL) -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
+      conda create -n test -c ${{ parameters.CHANNEL }} -c conda-forge -y cctbx-base python=$(PY_VER) pytest junit-xml
     displayName: Construct latest conda environment
 
   # copy extra test files
