CI: more version format updates
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
     year: $(Get-Date -Format yyyy)
     month: $(Get-Date -Format MM)
     day: $(Get-Date -Format dd)
-    version: $(year).$(month).a$(day)
+    version: $(year).$(month)a$(day)
 
   steps:
 
