--- a/.azure-pipelines/azure-pipelines-nightly-update.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-update.yml
@@ -22,7 +22,7 @@ jobs:
     year: $(Get-Date -Format yyyy)
     month: $(Get-Date -Format MM)
     day: $(Get-Date -Format dd)
-    version: $(year).$(month).a$(day)
+    version: $(year).$(month)a$(day)
 
   steps:
 
