--- a/.azure-pipelines/azure-pipelines-feedstock-update.yml
+++ b/.azure-pipelines/azure-pipelines-feedstock-update.yml
@@ -72,7 +72,7 @@ jobs:
 
       git checkout test
 
-      python ../.ci_support/update-meta.py \
+      python ./recipe/update-meta.py \
         --organization $(System.CollectionId) \
         --project $(System.TeamProject) \
         --runId $(Build.TriggeredBy.BuildId) \
