--- a/.azure-pipelines/test-linux.yml
+++ b/.azure-pipelines/test-linux.yml
@@ -12,6 +12,8 @@ jobs:
           PY_VER: 3.8
         python3.9:
           PY_VER: 3.9
+        python3.10:
+          PY_VER: 3.10
 
     steps:
     - template: ./templates/test-unix.yml
