--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -15,6 +15,8 @@ jobs:
           PY_VER: 3.8
         python3.9:
           PY_VER: 3.9
+        python3.10:
+          PY_VER: 3.10
 
     steps:
       - checkout: self
